# easyscreens-api

./: .gitignore  README.md  build-function.sh  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
lib/: easyscreens-stack.ts
lib/api/: CreateServerlessEndpoints.ts  ServerlessLambdaEndpoint.ts
resources/: Cargo.toml
resources/.cargo/: config.toml
resources/src/lambdas/get_screen/: main.rs
resources/src/lib/database/: database.rs  models.rs
test/: easyscreens.test.ts
