[package]
authors = ["Ryan"]
edition = "2018"
name = "resources"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
aws-sdk-ssm = "0.23.0"
lambda_runtime = "0.7.3"
log = "0.4.17"
serde_dynamodb = "0.9.0"
serde_json = "1.0.91"
simple_logger = "2.3.0"
structmap = "0.1.6"
tokio = {version = "1.24.2", features = ["full"]}

[[bin]]
name = "lambda_get_screen"
path = "src/lambdas/get_screen/main.rs"

[[bin]]
name = "lambda_remove_screen"
path = "src/lambdas/remove_screen/main.rs"
